functions drawFurniture() and drawRoom() added

--- a/gkiw_st_01_win.vcxproj
+++ b/gkiw_st_01_win.vcxproj
@@ -20,8 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allmodels.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="cube.h" />
+    <ClInclude Include="drawFurniture.h" />
+    <ClInclude Include="drawRoom.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="myCube.h" />
@@ -32,6 +35,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cube.cpp" />
+    <ClCompile Include="drawFurniture.cpp" />
+    <ClCompile Include="drawRoom.cpp" />
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="main_file.cpp" />
     <ClCompile Include="model.cpp" />
